# load_file

./: .gitignore  README.md  files.py  generate_measurements.py  main.py  number_list.py  pyproject.toml
files/: products.csv
src/Duckdb/: duckdb_csv.py
src/Pandas/: pandas_csv.py
