[tool.poetry]
name = "load-file"
version = "0.1.0"
description = "This is a test for load csv file"
authors = ["Silmara-Basso <silmarabasso@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
